RESOLVED FIXED63298
BlockStack uses default malloc instead of FastMalloc
https://bugs.webkit.org/show_bug.cgi?id=63298
Summary BlockStack uses default malloc instead of FastMalloc
Stephanie Lewis
Reported 2011-06-23 16:02:58 PDT
BlockStack uses default malloc, it should use fastMalloc
Attachments
patch (1.92 KB, patch)
2011-06-23 16:08 PDT, Stephanie Lewis
darin: review+
Stephanie Lewis
Comment 1 2011-06-23 16:08:21 PDT
Darin Adler
Comment 2 2011-06-23 16:40:07 PDT
Comment on attachment 98425 [details] patch Would be better if the change log said why.
Stephanie Lewis
Comment 3 2011-06-23 17:17:55 PDT
Note You need to log in before you can comment on or make changes to this bug.