https://bugs.webkit.org/show_bug.cgi?id=63298 Replace Malloc with FastMalloc to match the rest of wtf.

Reviewed by Darin Adler.

* wtf/BlockStack.h:
(WTF::::~BlockStack):
(WTF::::grow):
(WTF::::shrink):



git-svn-id: svn://svn.chromium.org/blink/trunk@89637 bbb929c8-8fbe-4397-9dbb-9b2b20218538