third_party/WebKit/Source/JavaScriptCore/wtf/BlockStack.h
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define BlockStack_h
 
 #include <wtf/Assertions.h>
+#include <wtf/FastMalloc.h>
 #include <wtf/Vector.h>
 
 namespace WTF {
@@ -58,9 +59,9 @@ template <typename T> BlockStack<T>::BlockStack()
 template <typename T> BlockStack<T>::~BlockStack()
 {
     if (m_spareBlock)
-        free(m_spareBlock);
+        fastFree(m_spareBlock);
     for (size_t i = 0; i < m_blocks.size(); ++i)
-        free(m_blocks[i]);
+        fastFree(m_blocks[i]);
 }
 
 template <typename T> inline const Vector<T*>& BlockStack<T>::blocks()
@@ -70,7 +71,7 @@ template <typename T> inline const Vector<T*>& BlockStack<T>::blocks()
 
 template <typename T> T* BlockStack<T>::grow()
 {
-    T* block = m_spareBlock ? m_spareBlock : static_cast<T*>(malloc(blockSize));
+    T* block = m_spareBlock ? m_spareBlock : static_cast<T*>(fastMalloc(blockSize));
     m_spareBlock = 0;
 
     m_blocks.append(block);
@@ -84,7 +85,7 @@ template <typename T> void BlockStack<T>::shrink(T* newEnd)
     m_blocks.removeLast();
 
     while (m_blocks.last() + blockLength != newEnd) {
-        free(m_blocks.last());
+        fastFree(m_blocks.last());
         m_blocks.removeLast();
     }
 }
